--- a/vyzio_ads/requirements.txt
+++ b/vyzio_ads/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework-simplejwt>=5.5.1
 
 # Database
 psycopg2-binary==2.9.9
+dj-database-url==2.1.0
 
 # Configuration
 python-decouple==3.8
