--- a/vyzio_ads/requirements.txt
+++ b/vyzio_ads/requirements.txt
@@ -1,5 +1,5 @@
 # Django & REST Framework
-django>=4.2.26
+django>=4.2.26,<5.0
 djangorestframework>=3.15.2
 django-cors-headers==4.3.1
 django-filter==23.5
