--- a/vyzio_ads/requirements.txt
+++ b/vyzio_ads/requirements.txt
@@ -18,6 +18,7 @@ PyJWT>=2.8.0
 # Media & Files
 Pillow>=10.3.0
 cloudinary==1.36.0
+django-cloudinary-storage==0.3.0
 python-multipart>=0.0.19
 
 # Payments
