--- a/vyzio_ads/requirements.txt
+++ b/vyzio_ads/requirements.txt
@@ -6,7 +6,7 @@ django-filter==23.5
 djangorestframework-simplejwt>=5.5.1
 
 # Database
-psycopg2-binary==2.9.9
+psycopg[binary]>=3.1.0
 dj-database-url==2.1.0
 
 # Configuration
