--- a/vyzio_ads/requirements.txt
+++ b/vyzio_ads/requirements.txt
@@ -15,6 +15,9 @@ python-decouple==3.8
 # Authentication
 PyJWT>=2.8.0
 
+# Rate Limiting
+django-ratelimit>=4.1.0
+
 # Media & Files
 Pillow>=10.3.0
 cloudinary==1.36.0
